--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li>
 											<i class="fa-brands fa-linkedin"></i>
 											<p>
-												<a href="https://www.linkedin.com/in/성준-홍-6bb854171" target="_blank">https://www.linkedin.com/in/성준-홍-6bb854171</a>
+												<a href="https://www.linkedin.com/in/freevue" target="_blank">https://www.linkedin.com/in/freevue</a>
 											</p>
                     </li>
                     <li>
